# comunichain

./: README.md
P_comunichain _2/: .env.example  index.js  package-lock.json  package.json  vercel.json
P_comunichain _2/api/: index.js
P_comunichain _2/public/: index.html
P_comunichain _2/smart-contracts/: Cargo.toml
P_comunichain _2/smart-contracts/src/: lib.rs
P_comunichain _2/src/: blockchain.js  database.js  validation.js
