[package]
name = "comunichain"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
default = ["contract"]
contract = []

[dependencies]
soroban-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true
codegen-units = 1
